# lodestone

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  DEVELOPMENT_DLL.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: CastTime.cpp  CastTime.h  Lodestone.psc  Log.cpp  Log.h  PCH.h  Papyrus.cpp  Papyrus.h  PluginInfo.cpp  PluginInfo.h  Version.h.in  plugin.cpp
src/Core/: BookFramework.cpp  BookFramework.h  CastTime.cpp  CastTime.h  Log.cpp  Log.h  MagicScaling.cpp  MagicScaling.h  Papyrus.cpp  Papyrus.h  PluginInfo.cpp  PluginInfo.h  SpellTomes.cpp  SpellTomes.h
src/Modules/: CastTime.cpp  CastTime.h
